package mlod.protos;

import "mlod/protos/mini_batch.proto";

message KittiUtilsConfig {
    // 3D area extents [min_x, max_x, min_y, max_y, min_z, max_z]
    repeated float area_extents = 1;

    // Voxel grid size (for 2D and 3D)
    required float voxel_size = 2;

    // Anchor strides
    repeated float anchor_strides = 3;

    // Anchor filtering density threshold
    optional int32 density_threshold = 4 [default = 1];

    required BevGenerator bev_generator = 20;

    required MiniBatchConfig mini_batch_config = 21;
}

message BevGenerator {
    oneof bev_maps_type {
        HeightPriors height_priors = 1;
        Slices slices = 2;
    }

    message HeightPriors {
        // Ground plane filter offset
        required float ground_filter_offset = 1;

        // Ground plane offset filter distance
        required float offset_filter_distance = 2;

        // Multiplier on standard deviation for gaussian prior
        required float std_dev_multiplier = 3;
    }

    message Slices {
        // Min and max height
        required float height_lo = 1;
        required float height_hi = 2;

        // Number of slices to create
        required int32 num_slices = 3;
    }
}
